swen430as2/test_files/invalid/defassign/DefiniteAssign_Invalid_26.while
int f(int x) {
    int y;
    while(x >= 0) {
      y = x;
      return y;
    }
    return y;
}
